ApplicationUser entity, registration and login methods. JWT token implementation

--- a/Project/appsettings.Development.json
+++ b/Project/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTSecretPassword"
   }
 }
