Moved connection string in appsettings files

--- a/Project/appsettings.Development.json
+++ b/Project/appsettings.Development.json
@@ -9,5 +9,8 @@
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:5000",
     "Secret": "JWTSecretPassword"
+  },
+  "ConnectionStrings": {
+    "Default": "Server=(local);Database=Test;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
