--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -25,4 +25,6 @@
     <Folder Include="Entities\SurvivalAnalysis\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="https://json.schemastore.org/appsettings.json" /></VisualStudio></ProjectExtensions>
+
 </Project>
