--- a/Project/appsettings.json
+++ b/Project/appsettings.json
@@ -1,15 +1,12 @@
 {
-/*
-The following identity settings need to be configured
-before the project can be successfully executed.
-For more info see https://aka.ms/dotnet-template-ms-identity-platform
-*/
+  "ConnectionStrings": {
+    "Default": "Server=proj-soft-dev-p\\SQLEXPRESS;Database=SurvivalAnalysis;User Id=dotnet;Password=SurvivalAnalysis2023;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "qualified.domain.name",
     "TenantId": "22222222-2222-2222-2222-222222222222",
     "ClientId": "11111111-1111-1111-11111111111111111",
-
     "Scopes": "access_as_user",
     "CallbackPath": "/signin-oidc"
   },
@@ -18,6 +15,11 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTSecretPassword"
   },
   "AllowedHosts": "*"
 }
