--- a/Project/appsettings.Development.json
+++ b/Project/appsettings.Development.json
@@ -6,11 +6,13 @@
     }
   },
   "JWT": {
-    "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:5000",
-    "Secret": "JWTSecretPassword"
+    "ValidAudience": "user",
+    "ValidIssuer": "testUser",
+    "Secret": "JWTSecretPassword",
+    "TokenValidityInMinutes": 60,
+    "RefreshTokenValidityInDays": 1
   },
   "ConnectionStrings": {
-    "Default": "Server=(local);Database=Test;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=Test;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
