--- a/Project/appsettings.json
+++ b/Project/appsettings.json
@@ -18,9 +18,11 @@
     }
   },
   "JWT": {
-    "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:5000",
-    "Secret": "JWTSecretPassword"
+    "ValidIssuer": "testUser",
+    "Audience": "user",
+    "Secret": "JWTSecretPassword",
+    "TokenValidityInMinutes": 60,
+    "RefreshTokenValidityInDays": 1
   },
   "AllowedHosts": "*"
 }
