--- a/Project/appsettings.json
+++ b/Project/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "CourseStatistics": "Server=proj-soft-dev-p\\SQLEXPRESS;Database=CourseStatistics;User Id=dotnet;Password=SurvivalAnalysis2023;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    //"CourseStatistics": "Server=localhost;Database=CourseStatistics;User Id=dotnet;Password=SurvivalAnalysis2023;",
+    //"SurvivalAnalysis": "Server=localhost;Database=SurvivalAnalysis;User Id=dotnet;Password=SurvivalAnalysis2023;"
+    //"Default": "Server=(local);Database=SurvivalAnalysis;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    //"CourseStatistics": "Server=proj-soft-dev-p\\SQLEXPRESS;Database=CourseStatistics;User Id=dotnet;Password=SurvivalAnalysis2023;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
     "SurvivalAnalysis": "Server=proj-soft-dev-p\\SQLEXPRESS;Database=SurvivalAnalysis;User Id=dotnet;Password=SurvivalAnalysis2023;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "AzureAd": {
