--- a/Project/appsettings.Development.json
+++ b/Project/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "JWT": {
-    "ValidAudience": "user",
-    "ValidIssuer": "testUser",
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
     "Secret": "JWTSecretPassword",
     "TokenValidityInMinutes": 60,
     "RefreshTokenValidityInDays": 1
