--- a/Project/appsettings.json
+++ b/Project/appsettings.json
@@ -20,12 +20,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "JWT": {
+  /*"JWT": {
     "ValidIssuer": "testUser",
     "Audience": "user",
     "Secret": "JWTSecretPassword",
     "TokenValidityInMinutes": 60,
     "RefreshTokenValidityInDays": 1
-  },
+  },*/
   "AllowedHosts": "*"
 }
