--- a/Project/appsettings.Development.json
+++ b/Project/appsettings.Development.json
@@ -5,13 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "JWT": {
+  /*"JWT": {
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:5000",
     "Secret": "JWTSecretPassword",
     "TokenValidityInMinutes": 60,
     "RefreshTokenValidityInDays": 1
-  },
+  },*/
   "ConnectionStrings": {
     "Default": "Server=(localdb)\\MSSQLLocalDB;Database=Test;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
