--- a/Project/appsettings.json
+++ b/Project/appsettings.json
@@ -20,12 +20,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  /*"JWT": {
-    "ValidIssuer": "testUser",
-    "Audience": "user",
+  "JWT": {
+    "ValidAudience": "http://193.201.187.182:8991/",
+    "ValidIssuer": "http://193.201.187.182:8991/",
     "Secret": "JWTSecretPassword",
     "TokenValidityInMinutes": 60,
     "RefreshTokenValidityInDays": 1
-  },*/
+  },
   "AllowedHosts": "*"
 }
